Bug 1251280.  When zooming in or out on a resized full-page image, we may need to update our vertical-overflow class even if we don't change anything else.  r=khuey